# coro

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.zh.md  class_diagram.md
docs/: sender_receiver_usage.en.md  sender_receiver_usage.zh.md  task_usage.en.md  task_usage.zh.md
include/coro/: awaitable.hpp  config.hpp  coro.hpp  inline_scheduler.hpp  io_uring_scheduler.hpp  let_value.hpp  receiver.hpp  scheduler.hpp  sender.hpp  sync_wait.hpp  task.hpp  then.hpp  thread_pool_scheduler.hpp  when_all.hpp
tests/: CMakeLists.txt  test_inline_scheduler.cpp  test_io_uring_scheduler.cpp  test_task.cpp  test_thread_pool_scheduler.cpp
